No suma las lineas de escenario de mapa, no entra en el fichero parser_scene [200~if (result == MAP_LINE)         {             map_started = 1;             map_line_index = map_line_index + 1; // Incrementar el indice del mapa, REVISAR ANTERIOR DONDE SE SUMAN FILAS

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
 		"type": "cppdbg",
 		"request": "launch",
 		"program": "${workspaceFolder}/cub3d",  // Ruta del ejecutable
-		"args": ["maps/library.cub"],  // Argumentos para pasar a tu minishell si es necesario
+		"args": ["maps/creepy.cub"],  // Argumentos para pasar a tu minishell si es necesario
 		"stopAtEntry": false,
 		"cwd": "${workspaceFolder}",  // Directorio de trabajo
 		"environment": [],
