revisando map_heig que no suma en linea de mapa para que se guarden los valores de creacion del mapa de alto y ancho, toda la logica en handle_line que no entra ni suma

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,9 @@
 {
 	"version": "0.2.0",
 	"configurations": [
+		
 	  {
-		"name": "Debug Minishell",
+		"name": "Debug cub3d",
 		"type": "cppdbg",
 		"request": "launch",
 		"program": "${workspaceFolder}/cub3d",  // Ruta del ejecutable
