--- a/inc/libft/Makefile
+++ b/inc/libft/Makefile
@@ -28,8 +28,7 @@ FILES =  ft_strlen.c ft_memset.c ft_isprint.c ft_isdigit.c \
 		 ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 		 ft_putnbr_fd.c \
 		 get_next_line.c\
-
-
+		 ft_freearrays.c \
 
 all : $(NAME)
 
